bug : video mal alignée

--- a/client/styles/main.css
+++ b/client/styles/main.css
@@ -46,6 +46,16 @@
   height:100%
 }
 
+#video {
+  position: relative;
+  top:50%;
+  transform: translateY(-50%);
+}
+
+video {
+  width: 100%;
+}
+
 #photo md-toolbar.transparent-toolbar {
   opacity: 0.65;
 }
